welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:4: error: illegal start of statement (no modifiers allowed here)
{override def run() {
 ^